# Parallel-longest-common-subsequence-LCS-

./: README.md
LCSOpenMPI/: CMakeLists.txt  lcs.out  main.cpp  test.sh
LCSOpenMPI/LCS/: LCS.cpp  LCS.h  Result.cpp  Result.h
LCSOpenMPI/LCS/Impl/: LCS_v1.cpp  LCS_v1.h  LCS_v2.cpp  LCS_v2.h
LCSOpenMPI/Outputs/: output.csv  output2.csv  output3.csv
LCSOpenMPI/Test/: Sequences_1  Sequences_1000  Sequences_60000  Sequences_80000
LCS_CUDA/: CMakeLists.txt  cuda_launch_config.cu  main.cu  test.sh
LCS_CUDA/LCS/: LCSStrategy.cu  LCSStrategy.cuh  Result.cu
LCS_CUDA/LCS/Implementations/: LCS_v1.cu  LCS_v1.cuh  LCS_v2.cu  LCS_v2.cuh
LCS_CUDA/Outputs/: output.csv  output2.csv  output3.csv
LCS_CUDA/Test/: Sequences_100000  Sequences_15000  Sequences_2000  Sequences_40000  Sequences_5000  Sequences_50000
LCS_OpenMP/: CMakeLists.txt  lcs.out  main.cpp  test.sh
LCS_OpenMP/LCS/: LCS.cpp  LCS.h  Result.cpp  Result.h
LCS_OpenMP/LCS/Impl/: LCS_v1.cpp  LCS_v1.h  LCS_v2.cpp  LCS_v2.h
LCS_OpenMP/Outputs/: output.csv  output2.csv  output3.csv
LCS_OpenMP/Test/: Sequences_10000  Sequences_200  Sequences_20000  Sequences_500
SerialLCS/: CMakeLists.txt  Result.cpp  Result.h  a.out  main.cpp  test.sh
SerialLCS/Outputs/: output.csv  output2.csv  output3.csv  output4.csv  output5.csv  output6.csv
SerialLCS/Test/: Sequences_100  Sequences_30000  Sequences_70000  Sequences_90000
